2006-12-04  Nick Roberts  <nickrob@snap.net.nz>

	* simple.el (toggle-truncate-lines): Clarify doc string.

	* progmodes/gdb-ui.el (gdb-var-delete-children): New function.
	(gdb-speedbar-expand-node): Use it.

2006-12-04  Richard Stallman  <rms@gnu.org>

	* progmodes/python.el (python-indent): Add safe-local-variable prop.

	* dired.el (dired-revert): Turn off dired-after-readin-hook
	around call to dired-readin.

	* menu-bar.el (menu-bar-make-toggle): Add "globally"
	to echo area messages.
	<indicate-empty-lines, case-fold-search>:
	Add "globally" to Help string.
	<case-fold-search>: MESSAGE arg need not say "globally".
	(menu-bar-edit-menu <paste-from-menu>): Renamed from select-and-paste.

2006-12-03  Liam Healy  <lnp@healy.washington.dc.us>  (tiny change)

	* outline.el (outline-end-of-subtree): Don't leave an empty
	line hidden as we would a real next heading.

2006-12-03  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-ascend): Add an optional argument to preserve
	original position of point when unsuccessful.  Also, fix a
	docstring error.
	(allout-yank-processing): Fix depth shift of multiple-topic so yanks
	work again, using allout-ascend's new option.
	(allout-setup-mode-map): Extracted from allout-mode to initialize
	allout-mode-map.  Call it on file load, so the mode docstring
	substitutions work even if allout mode has not yet been invoked.
	(allout-mode): Use new allout-setup-mode-map to track any keybinding
	customizations since the map was last processed.  Also,	refine the
	docstring so it's ship-shape for release.
	(allout-default-layout, allout-beginning-of-line-cycles)
	(allout-distinctive-bullets-string, allout-use-mode-specific-leader)
	(allout-encrypt-unencrypted-on-saves, allout-inhibit-auto-fill)
	(allout-version, allout-layout, allout-infer-body-reindent)
	(allout-infer-header-lead-and-primary-bullet, allout-view-change-hook)
	(allout-init, allout-mode, allout-next-heading, allout-chart-subtree)